--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -22161,14 +22161,14 @@
     }
    ],
    "source": [
-    "print(Q)\n",
+    "# print(Q)\n",
     "np.random.seed(0)\n",
     "desc = [['S', 'F', 'F'], ['F', 'H', 'H'], ['F', 'F', 'G']]\n",
     "env = load_frozen_lake(desc=desc)\n",
     "Q = q_init(env)\n",
-    "print(Q)\n",
+    "# print(Q)\n",
     "Q, total_rewards  = train(env, Q)\n",
-    "print(Q)\n",
+    "# print(Q)\n",
     "split_rewards = np.split(np.array(total_rewards), 10)\n",
     "for i, rewards in enumerate(split_rewards):\n",
     "    print((i+1) * 500, ':', np.mean(rewards))"
