Changes for Ben

--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -342,8 +342,8 @@
    "source": [
     "def epsilon_greedy(Q, state, epsilon):\n",
     "    \"\"\"Epsilon-greedy policy.\"\"\"\n",
-    "    if random.uniform(0, 1) < epsilon:\n",
-    "        action = env.action_space.sample()  # Explore action space\n",
+    "    if np.random.uniform(0, 1) < epsilon:\n",
+    "        action = np.random.randint()  # Explore action space\n",
     "    else:\n",
     "        action = np.argmax(Q[state])  # Exploit learned values\n",
     "    return action"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "2\n"
+      "0\n"
      ]
     }
    ],
