--- a/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb
+++ b/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/10/12 00:41:23 INFO mlflow.tracking.fluent: Experiment with name '729553857325031014' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:///c:/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/reinforcement_learning/pipeline/data_augmentation/K-NN_Music_Features_2/755551824411776114', creation_time=1697089283277, experiment_id='755551824411776114', last_update_time=1697089283277, lifecycle_stage='active', name='729553857325031014', tags={}>"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.set_experiment(\"729553857325031014\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -28,31 +55,41 @@
        "<ActiveRun: >"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Initialize MLflow experiment\n",
-    "mlflow.start_run(experiment_id=None, run_name=\"KNN_Audio_Features\")"
+    "mlflow.start_run(experiment_id=None, run_name=\"KNN_Audio_Features_2\", nested=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('claybowls_starred.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample data: Replace this with your actual audio features data\n",
-    "X_train = np.random.rand(100, 5)\n",
-    "y_train = np.random.randint(0, 2, 100)\n",
-    "X_test = np.random.rand(10, 5)"
+    "audio_features = ['danceability', 'energy', 'loudness', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']\n",
+    "X_train_clayton = df[audio_features].values\n",
+    "y_train_clayton = df[audio_features].values\n",
+    "X_test = df[audio_features].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +108,7 @@
        "'euclidean'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,26 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\site-packages\\_distutils_hack\\__init__.py:18: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
-      "  warnings.warn(\n",
-      "C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     "ename": "MlflowException",
+     "evalue": "Path 'K-NN_Music_Features_2' already exists and is not empty",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMlflowException\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\clayb\\Documents\\GitHub\\holbertonschool-machine_learning\\reinforcement_learning\\pipeline\\data_augmentation\\MLFlow.ipynb Cell 6\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/MLFlow.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m knn\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/MLFlow.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Save the model using MLflow\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/MLFlow.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m mlflow\u001b[39m.\u001b[39;49msklearn\u001b[39m.\u001b[39;49msave_model(sk_model\u001b[39m=\u001b[39;49mknn, path\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mK-NN_Music_Features_2\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/MLFlow.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Log the model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/MLFlow.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m mlflow\u001b[39m.\u001b[39msklearn\u001b[39m.\u001b[39mlog_model(knn, \u001b[39m\"\u001b[39m\u001b[39mKNN_Model\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\mlflow\\sklearn\\__init__.py:242\u001b[0m, in \u001b[0;36msave_model\u001b[1;34m(sk_model, path, conda_env, code_paths, mlflow_model, serialization_format, signature, input_example, pip_requirements, extra_pip_requirements, pyfunc_predict_fn, metadata)\u001b[0m\n\u001b[0;32m    233\u001b[0m \u001b[39mif\u001b[39;00m serialization_format \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m SUPPORTED_SERIALIZATION_FORMATS:\n\u001b[0;32m    234\u001b[0m     \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    235\u001b[0m         message\u001b[39m=\u001b[39m(\n\u001b[0;32m    236\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mUnrecognized serialization format: \u001b[39m\u001b[39m{\u001b[39;00mserialization_format\u001b[39m}\u001b[39;00m\u001b[39m. Please specify one\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    239\u001b[0m         error_code\u001b[39m=\u001b[39mINVALID_PARAMETER_VALUE,\n\u001b[0;32m    240\u001b[0m     )\n\u001b[1;32m--> 242\u001b[0m _validate_and_prepare_target_save_path(path)\n\u001b[0;32m    243\u001b[0m code_path_subdir \u001b[39m=\u001b[39m _validate_and_copy_code_paths(code_paths, path)\n\u001b[0;32m    245\u001b[0m \u001b[39mif\u001b[39;00m signature \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m input_example \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\mlflow\\utils\\model_utils.py:130\u001b[0m, in \u001b[0;36m_validate_and_prepare_target_save_path\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_and_prepare_target_save_path\u001b[39m(path):\n\u001b[0;32m    129\u001b[0m     \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(path) \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(os\u001b[39m.\u001b[39mscandir(path)):\n\u001b[1;32m--> 130\u001b[0m         \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    131\u001b[0m             message\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mPath \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m already exists and is not empty\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    132\u001b[0m             error_code\u001b[39m=\u001b[39mRESOURCE_ALREADY_EXISTS,\n\u001b[0;32m    133\u001b[0m         )\n\u001b[0;32m    135\u001b[0m     os\u001b[39m.\u001b[39mmakedirs(path, exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mMlflowException\u001b[0m: Path 'K-NN_Music_Features_2' already exists and is not empty"
      ]
     }
    ],
    "source": [
     "# Fit the model\n",
-    "knn.fit(X_train, y_train)\n",
+    "knn.fit(X_train_clayton, y_train_clayton)\n",
     "\n",
     "# Save the model using MLflow\n",
-    "mlflow.sklearn.save_model(sk_model=knn, path=\"K-NN_Music_Features\")\n",
+    "mlflow.sklearn.save_model(sk_model=knn, path=\"K-NN_Music_Features_2\")\n",
     "\n",
     "# Log the model\n",
     "mlflow.sklearn.log_model(knn, \"KNN_Model\")\n",
@@ -113,30 +153,104 @@
     "\n",
     "# Log metrics (example: mean distance of the first query point)\n",
     "mlflow.log_metric(\"mean_distance_first_query\", np.mean(distances[0]))\n",
-    "\n",
-    "# End MLflow run\n",
-    "mlflow.end_run()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\site-packages\\_distutils_hack\\__init__.py:18: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
+      "  warnings.warn(\n",
+      "C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "Successfully registered model 'K-NN'.\n",
+      "2023/10/12 00:20:48 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: K-NN, version 1\n",
+      "Created version '1' of model 'K-NN'.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mlflow.models.model.ModelInfo at 0x1fb6d8f8dc0>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.sklearn.log_model(\n",
+    "    sk_model=knn,\n",
+    "    artifact_path=\"sklearn-model\",\n",
+    "    registered_model_name=\"K-NN\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices of 10 nearest songs: [[10 50 38 78 66 71 94 54 49 84]\n",
-      " [88 80 84 38  4 14  2 85 72 79]\n",
-      " [86 58 20 63 15 25  9 61 65 44]\n",
-      " [88 14 80 38 72 84 61 79  2 85]\n",
-      " [89 17 36 87 96 62 47 92 82 48]\n",
-      " [55  1 42 85 46  5 98 68 51 28]\n",
-      " [96 56 48 67 11 92 12 29 97 82]\n",
-      " [23 29  2 15 72  5 19 21 11 82]\n",
-      " [ 0 64 98 55 46 84  1 77 49 54]\n",
-      " [53 66 93 90 73 83 18  7 81 99]]\n"
+      "Artifact URI: file:///c:/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/data_augmentation/reinforcement_learning/pipeline/data_augmentation/K-NN_Music_Features_2/0/acdb16915ba3405ab66a86c6b65f6365/artifacts\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the URI of the currently active run's artifact location\n",
+    "artifact_uri = mlflow.get_artifact_uri()\n",
+    "\n",
+    "print(\"Artifact URI:\", artifact_uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# End MLflow run\n",
+    "mlflow.end_run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.set_tracking_uri(\"reinforcement_learning\\pipeline\\data_augmentation\\K-NN_Music_Features_2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of 10 nearest songs: [[98 71 12 82 23 51  9  5 41  6]\n",
+      " [19 77 58 75 52 20 22 62 32 67]\n",
+      " [98 82 71 12 41 54 23 73 76 51]\n",
+      " [68 47 44 76 16 18 74 86 57 38]\n",
+      " [30  7 17 79 40  8 29 85 61 92]\n",
+      " [ 2  6  9 40 25 11  7 23 61 48]\n",
+      " [95 55  8 14 17 91 29 53 96 22]\n",
+      " [98 41 23 82  9 12 71 48 31 54]\n",
+      " [83 24 78 94 97 57 20 35 91 74]\n",
+      " [94 78 96 59 38 85 97 24 83 31]]\n"
      ]
     }
    ],
@@ -147,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,23 +271,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices of 10 nearest songs to Clayton's average: [[10 50 38 78 66 71 94 54 49 84]\n",
-      " [88 80 84 38  4 14  2 85 72 79]\n",
-      " [86 58 20 63 15 25  9 61 65 44]\n",
-      " [88 14 80 38 72 84 61 79  2 85]\n",
-      " [89 17 36 87 96 62 47 92 82 48]\n",
-      " [55  1 42 85 46  5 98 68 51 28]\n",
-      " [96 56 48 67 11 92 12 29 97 82]\n",
-      " [23 29  2 15 72  5 19 21 11 82]\n",
-      " [ 0 64 98 55 46 84  1 77 49 54]\n",
-      " [53 66 93 90 73 83 18  7 81 99]]\n"
+      "Indices of 10 nearest songs to Clayton's average: [[98 71 12 82 23 51  9  5 41  6]\n",
+      " [19 77 58 75 52 20 22 62 32 67]\n",
+      " [98 82 71 12 41 54 23 73 76 51]\n",
+      " [68 47 44 76 16 18 74 86 57 38]\n",
+      " [30  7 17 79 40  8 29 85 61 92]\n",
+      " [ 2  6  9 40 25 11  7 23 61 48]\n",
+      " [95 55  8 14 17 91 29 53 96 22]\n",
+      " [98 41 23 82  9 12 71 48 31 54]\n",
+      " [83 24 78 94 97 57 20 35 91 74]\n",
+      " [94 78 96 59 38 85 97 24 83 31]]\n"
      ]
     }
    ],
@@ -194,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
